Upload of merged(and slightly polished) code
Changes since v1.10:

-Character selection box now uses character icons instead of text
-Added hitbox ID and hitbox interactions to HitboxScript
-Updated character specific attributes list with more information for
some entries.
-More work on ScriptEditWindow(Not ready to be released, however.)
-Cleaned out unused methods/variables/commented out scraps
-Added Terminate Specific Collision, Set All Bones State, and Set
Specific Bone State to Event. If you've got a prettier name for any,
feel free to change it haha.
-Script switching is functional with minimal bugs.
-Added ability to save and load characters as .DAT files.